# markdown-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: gtk-ui.glade  main.rs  preview.rs  utils.rs
