[package]
name = "markdown-rs"
version = "0.2.2"
authors = ["Nil Gradisnik <nil.gradisnik@gmail.com>"]
description = "Fast, simple, distraction free Markdown editor."
repository = "@nilgradisnik/markdown-rs"
readme = "README.md"
license = "MIT"

[dependencies]
gio = "0.9.1"
sourceview = "0.9"
comrak = "0.26.0"
horrorshow = "0.8.4"
webkit2gtk = "0.11"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_22"]
